update options for Anthropic
- also fixed the prompt and logic for retry job

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,2 @@
 OPENAI_API_KEY = "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"
+ANTHROPIC_API_KEY = "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"
